[gd_scene load_steps=3 format=2]

[ext_resource path="res://InputNeuron.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 47.75 )

[node name="Input" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="State" type="ColorRect" parent="."]
margin_right = 100.0
margin_bottom = 95.0
color = Color( 0.960784, 0.92549, 0.929412, 1 )

[node name="Handle" type="Button" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 91.0
margin_bottom = 46.0

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 6.00003
margin_top = 50.0
margin_right = 130.0
margin_bottom = 70.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="SpikesTrainLabel" type="Label" parent="."]
margin_left = 23.0
margin_top = 64.0
margin_right = 97.0
margin_bottom = 78.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spike Train:"

[node name="SpikeTrain" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 77.0
margin_right = 136.0
margin_bottom = 99.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 50, 48.25 )
shape = SubResource( 1 )

[connection signal="button_down" from="Handle" to="." method="_on_Handle_button_down"]
[connection signal="button_up" from="Handle" to="." method="_on_Handle_button_up"]
